added title and description

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Welcome to Lorenzo Najt's webpage
+description: This is where Lorenzo can cultivate a professional image 
